tests/paczka2/big_fuzzy/31740821.err
Error in line 4: HQpHGrUO9w S803 32,9
Error in line 14: Ck0 S58 20,0
Error in line 26: HQpHGrUO9w S58 -2,9
Error in line 18: EsGmaVdu S803 5,6
Error in line 29: EsGmaVdu A96 33,7
Error in line 25: HQpHGrUO9w S58 21,4
Error in line 47: A661 A96 9,0
Error in line 54: MHxvG S803 40,3
Error in line 51: hp6X4 S58 28,1
Error in line 49: HQpHGrUO9w S803 65,4
Error in line 89: Ck0 S803 10,9
Error in line 98: EsGmaVdu S803 349,3
Error in line 107: EsGmaVdu A661 106,6
Error in line 93: Ve4fH S58 280,6
Error in line 101: MHxvG S58 36,8
Error in line 113: Ve4fH A96 34,3
Error in line 122: hp6X4 S58 44,7
Error in line 128: MHxvG S803 18,20
Error in line 125: A661 A661 85,8
Error in line 133: Ve4fH A96 75,5
Error in line 139: MHxvG S803 23,1
Error in line 148: MHxvG S58 -2,6
Error in line 152: EsGmaVdu A661 51,9
Error in line 136: Ck0 A96 51,8
Error in line 156: A661 S803 1,0
Error in line 155: Ck0 S58 37,8
Error in line 143: HQpHGrUO9w S803 60,0
Error in line 163: Ck0 S803 -11,8
Error in line 160: Ck0 S803 4,8
Error in line 161: HQpHGrUO9w S58 80,8
Error in line 177: EsGmaVdu A96 59,2
Error in line 182: EsGmaVdu A661 3,9
Error in line 186: hp6X4 A661 87,7
Error in line 179: MHxvG S58 102,8
Error in line 191: HQpHGrUO9w A96 -1,5
Error in line 195: EsGmaVdu S803 90,0
Error in line 199: EsGmaVdu S58 30,7
Error in line 214: A661 A661 44,8
Error in line 215: A661 A96 89,2
Error in line 229: Ve4fH A96 44,9
Error in line 227: HQpHGrUO9w A96 172,2
Error in line 233: Ve4fH A661 38,6
Error in line 242: hp6X4 A661 22,40
Error in line 209: hp6X4 S58 73,8
